--- a/src/html/product.html
+++ b/src/html/product.html
@@ -7,241 +7,244 @@
 		<link rel="stylesheet" href="../dist/css/common.css" />
 		<link rel="stylesheet" href="../dist/css/common.css" />
 		<link rel="stylesheet" href="../dist/css/product.css" />
+		<link rel="shortcut icon" href="../dist/css/img/onair.ico" />
 	</head>
 	<body>
 	<div id="wrap">
 		<div id="header">
-			<span class="logo"><a href="../index.html" target="_self" title="卡当网"></a></span>
-			<div class="intro">
-				<ul class="intro-login">
-					<li>Hi，欢迎来到卡当网</li>
-					<li class="login"><a href="#" title="登录">登录</a></li>
-					<li class="sign"><a href="#" title="注册">注册</a></li>
-				</ul>
-				<!--我的卡当导航栏-->
-      	<ul class="intro-menu">
-      		<li>
-      			<a href="#" title="我的卡当">我的卡当<i class="icon"></i></a>
-      			<ul class="select">
-      				<li><a href="#" title="我的订单">我的订单</a></li>
-      				<li><a href="#" title="我的优惠券">我的优惠券</a></li>
-      			</ul>
-      		</li>
-      		<li>
-      			<a href="cart.html" target="_blank" title="购物车" id="cart"><i class="icon-cart"></i>购物车<i class="icon"></i></a>
-      			<p class="select" style="width: 304px;left:80px;color:#999">您的购物车中暂无商品，赶快选择心爱的商品吧！</p>
-      		</li>
-      		<li>
-      			<a href="#" title="手机版"><i class="icon-phone"></i>手机版</a>
-      			<p class="select" style="left: 100px;width: 148px;height:188px;border: 0;padding: 0;"><img src="../img/img-code.jpg"/></p>
-      		</li>
-      		<li>
-      			<a href="#" title="我的收藏">我的收藏<i class="icon"></i></a>
-      			<ul class="select" style="left: 240px;">
-      				<li><a href="#" title="收藏的商品">收藏的商品</a></li>
-      				<li><a href="#" title="收藏的店铺">收藏的店铺</a></li>
-      			</ul>
-      		</li>
-      		<li><a href="#" title="在线客服">在线客服</a></li>
-      		<li><a href="#" title="收藏卡当网">收藏卡当网</a></li>
-      	</ul>
-    	</div>
-    	<!--搜索输入框-->
-    	<div class="seach">
-    		<input type="text" class="seach-input" placeholder="七夕情人节送女朋友什么？" />
-    		<input type="submit" class="search-button"/>
-      	<img src="../img/kdDes.png" style="float: right;margin:12px 35px 0 0;"/>
-    		<ul class="search-tab">
-    			<li><a href="#" title="送女朋友">送女朋友</a></li>
-    			<li><a href="#" title="浪漫表白">浪漫表白</a></li>
-    			<li><a href="#" title="我的订单查询">我的订单查询</a></li>
-    		</ul>
-    	</div>
-    	<!--送礼攻略-->
-    	<div class="gonglue">
-    		<h2><i class="nav-icons icons-arrows-cate"></i>送礼攻略</h2>
-    		<div class="giftClassify clearfix" style="display: none;width: 860px;padding: 0;">
-        	<div class="gift-xq">
-        		<p class="gift-tle">按兴趣选礼物</p>
-            <div class="cate-item">
-          		<h3 class="vm-cap">
-                <a title="礼物送给谁" href="">礼物送给谁</a>
-          		</h3>
-          		<div class="vm-cont">
-          			<a title="送普通朋友" href="">送普通朋友</a>
-                <a title="送心仪/暗恋对象" href="">送心仪/暗恋对象</a>
-                <a title="送女盆友/老婆" href="">送女盆友/老婆</a>
-                <a title="送男盆友/老公" href="" >送男盆友/老公</a>
-                <a title="送情侣" href="" >送情侣</a>
-              </div>
-  					</div>
-            <div class="cate-item">
-			        <h3 class="vm-cap">
-		            <a title="收礼人个性" href=""  >收礼人个性</a>
-			        </h3>
-			        <div class="vm-cont">
-			        	<a title="女神" href="" style="color:#666666;">女神</a>
-                <a title="可爱/萌妹子" href="">可爱/萌妹子</a>
-                <a title="文艺女青年" href="">文艺女青年</a>
-                <a title="吃货" href="">吃货</a>
-                <a title="学生党" href="">学生党</a>
-                <a title="星座控" href="">星座控</a>
-                <a title="白领" href=""  >白领</a>
-	            </div>
-      			</div>
-        		<div class="cate-item">
-			        <h3 class="vm-cap">
-		            <a title="礼物价格" href=""  >礼物价格</a>
-			        </h3>
-			        <div class="vm-cont">
-			        	<a title="100以下" href=""  >100以下</a>
-                <a title="100-200" href="" style='color:#666666;' >100-200</a>
-                <a title="200-500" href=""  >200-500</a>
-                <a title="500以上" href="" >500以上</a>
-                <a title="包邮" href="">包邮</a>
-	            </div>
-						</div>
-		        <div class="cate-item">
-			    		<h3 class="vm-cap">
-				        <a title="礼物类型" href=""  >礼物类型</a>
-					    </h3>
-					    <div class="vm-cont">
-					    	<a title="照片定制" href=""  >照片定制</a>
-		        		<a title="名字定制" href=""  >名字定制</a>
-				        <a title="创意又有心意" href=""  >创意又有心意</a>
-				        <a title="一对一对的" href=""  >一对一对的</a>
-				        <a title="实用" href=""  >实用</a>
-				        <a title="浪漫" href=""  >浪漫</a>
-				        <a title="礼物套装" href=""  >礼物套装</a>
-				        <a title="星座" href=""  >星座</a>
-			      	</div>
-			  		</div>
-					</div>
-					<!--按类目选礼物-->
-					<div class="gift-lm" style="width: 520px;">
-				    <p class="gift-tle">按类目选礼物</p>
-				    <div class="cate-cont" style="width: 540px;">
+			<div class="container">
+				<span class="logo"><a href="../index.html" target="_self" title="卡当网"></a></span>
+				<div class="intro">
+					<ul class="intro-login">
+						<li>Hi，欢迎来到卡当网</li>
+						<li class="login"><a href="#" title="登录">登录</a></li>
+						<li class="sign"><a href="#" title="注册">注册</a></li>
+					</ul>
+					<!--我的卡当导航栏-->
+	      	<ul class="intro-menu">
+	      		<li>
+	      			<a href="#" title="我的卡当">我的卡当<i class="icon"></i></a>
+	      			<ul class="select">
+	      				<li><a href="#" title="我的订单">我的订单</a></li>
+	      				<li><a href="#" title="我的优惠券">我的优惠券</a></li>
+	      			</ul>
+	      		</li>
+	      		<li>
+	      			<a href="cart.html" target="_blank" title="购物车" id="cart"><i class="icon-cart"></i>购物车<i class="icon"></i></a>
+	      			<p class="select" style="width: 304px;left:80px;color:#999">您的购物车中暂无商品，赶快选择心爱的商品吧！</p>
+	      		</li>
+	      		<li>
+	      			<a href="#" title="手机版"><i class="icon-phone"></i>手机版</a>
+	      			<p class="select" style="left: 100px;width: 148px;height:188px;border: 0;padding: 0;"><img src="../img/img-code.jpg"/></p>
+	      		</li>
+	      		<li>
+	      			<a href="#" title="我的收藏">我的收藏<i class="icon"></i></a>
+	      			<ul class="select" style="left: 240px;">
+	      				<li><a href="#" title="收藏的商品">收藏的商品</a></li>
+	      				<li><a href="#" title="收藏的店铺">收藏的店铺</a></li>
+	      			</ul>
+	      		</li>
+	      		<li><a href="#" title="在线客服">在线客服</a></li>
+	      		<li><a href="#" title="收藏卡当网">收藏卡当网</a></li>
+	      	</ul>
+	    	</div>
+	    	<!--搜索输入框-->
+	    	<div class="seach">
+	    		<input type="text" class="seach-input" placeholder="七夕情人节送女朋友什么？" />
+	    		<input type="submit" class="search-button"/>
+	      	<img src="../img/kdDes.png" style="float: right;margin:12px 35px 0 0;"/>
+	    		<ul class="search-tab">
+	    			<li><a href="#" title="送女朋友">送女朋友</a></li>
+	    			<li><a href="#" title="浪漫表白">浪漫表白</a></li>
+	    			<li><a href="#" title="我的订单查询">我的订单查询</a></li>
+	    		</ul>
+	    	</div>
+	    	<!--送礼攻略-->
+	    	<div class="gonglue">
+	    		<h2><i class="nav-icons icons-arrows-cate"></i>送礼攻略</h2>
+	    		<div class="giftClassify clearfix" style="display: none;width: 860px;padding: 0;">
+	        	<div class="gift-xq">
+	        		<p class="gift-tle">按兴趣选礼物</p>
+	            <div class="cate-item">
+	          		<h3 class="vm-cap">
+	                <a title="礼物送给谁" href="">礼物送给谁</a>
+	          		</h3>
+	          		<div class="vm-cont">
+	          			<a title="送普通朋友" href="">送普通朋友</a>
+	                <a title="送心仪/暗恋对象" href="">送心仪/暗恋对象</a>
+	                <a title="送女盆友/老婆" href="">送女盆友/老婆</a>
+	                <a title="送男盆友/老公" href="" >送男盆友/老公</a>
+	                <a title="送情侣" href="" >送情侣</a>
+	              </div>
+	  					</div>
+	            <div class="cate-item">
+				        <h3 class="vm-cap">
+			            <a title="收礼人个性" href=""  >收礼人个性</a>
+				        </h3>
+				        <div class="vm-cont">
+				        	<a title="女神" href="" style="color:#666666;">女神</a>
+	                <a title="可爱/萌妹子" href="">可爱/萌妹子</a>
+	                <a title="文艺女青年" href="">文艺女青年</a>
+	                <a title="吃货" href="">吃货</a>
+	                <a title="学生党" href="">学生党</a>
+	                <a title="星座控" href="">星座控</a>
+	                <a title="白领" href=""  >白领</a>
+		            </div>
+	      			</div>
+	        		<div class="cate-item">
+				        <h3 class="vm-cap">
+			            <a title="礼物价格" href=""  >礼物价格</a>
+				        </h3>
+				        <div class="vm-cont">
+				        	<a title="100以下" href=""  >100以下</a>
+	                <a title="100-200" href="" style='color:#666666;' >100-200</a>
+	                <a title="200-500" href=""  >200-500</a>
+	                <a title="500以上" href="" >500以上</a>
+	                <a title="包邮" href="">包邮</a>
+		            </div>
+							</div>
 			        <div class="cate-item">
-			        <h3 class="vm-cap"> <a title="时尚饰品" href="" style="font-size:14px;">时尚饰品</a> </h3>
-			        <div class="vm-cont">
-                <a href="" title="项链">项链</a>
-                <a href="" title="手链手镯">手链手镯</a>
-                <a href="" title="戒指">戒指</a>
-                <a href="" title="发饰/胸针">发饰/胸针</a>
-                <a href="" title="耳钉耳环">耳钉耳环</a>
-                <a href="" title="男士饰品">男士饰品</a>
-                <a href="" title="高档珠宝">高档珠宝</a>
-			        </div>
-				    </div>
-		        <div class="cate-item">
-		        	<h3 class="vm-cap">
-		        		<a title="围巾配饰" href="" style="font-size:14px;">围巾配饰</a>
-		        	</h3>
-		        	<div class="vm-cont">
-                <a href="" title="围巾/手套">围巾/手套</a>
-                <a href="" title="钱包/背包">钱包/背包</a>
-                <a href="" title="手表">手表</a>
-                <a href="" title="皮带">皮带</a>
-                <a href="" title="钥匙扣" >钥匙扣</a>
-                <a href="" title="zippo/军刀">zippo/军刀</a>
-                <a href="" title="梳子/化妆镜">梳子/化妆镜</a>
-	            </div>
-		      	</div>
-				    <div class="cate-item">
-			        <h3 class="vm-cap"> 
-			        	<a title="创意摆件" href="" style="font-size:14px;">创意摆件</a> 
-			        </h3>
-			        <div class="vm-cont">
-                <a href="" title="DIY模型/拼图">DIY模型/拼图</a>
-                <a href="" title="水晶摆件" >水晶摆件</a>
-                <a href="" title="装饰画/摆件">装饰画/摆件</a>
-                <a href="" title="蜡烛/创意灯">蜡烛/创意灯</a>
-                <a href="" title="音乐盒" >音乐盒</a>
-                <a href="" title="印章">印章</a>
-                <a href="" title="汽车饰品">汽车饰品</a>
-			        </div>
-				    </div>
-				    <div class="cate-item">
-			        <h3 class="vm-cap"> 
-			        	<a title="布艺家纺" href="" style="font-size:14px;">布艺家纺</a> 
-			        </h3>
-			        <div class="vm-cont">
-                <a href="" title="毛绒公仔">毛绒公仔</a>
-                <a href="" title="抱枕靠垫">抱枕靠垫</a>
-                <a href="" title="居家服/情趣">居家服/情趣</a>
-            	</div>
-				    </div>
-				    <div class="cate-item">
-			        <h3 class="vm-cap"> 
-			        	<a title="花/巧克力" href="" style="font-size:14px;">花/巧克力</a> 
-			        </h3>
-			        <div class="vm-cont">
-                <a href="" title="巧克力">巧克力</a>
-                <a href="" title="永生花">永生花</a>
-                <a href="" title="金箔花">金箔花</a>
-                <a href="" title="酒水饮料" >酒水饮料</a>
-                <a href="" title="卡通花/创意花束">卡通花/创意花束</a>
-                <a href="/list/40-166/" title="蜡烛/气氛配件">蜡烛/气氛配件</a>
-	            </div>
-				    </div>
-				    <div class="cate-item">
-			        <h3 class="vm-cap"> 
-			        	<a title="家居日用" href="" style="font-size:14px;">家居日用</a> 
-			        </h3>
-			        <div class="vm-cont">
-                <a href="" title="变色杯/保温杯">变色杯/保温杯</a>
-                <a href="" title="遮阳伞">遮阳伞</a>
-                <a href="" title="创意灯" >创意灯</a>
-                <a href="" title="情趣礼品">情趣礼品</a>
-                <a href="" title="生活电器">生活电器</a>
-                <a href="" title="碗筷锅具">碗筷锅具</a>
-                <a href="" title="收纳">收纳</a>
-                <a href="" title="洗漱用品">洗漱用品</a>
-	            </div>
-				    </div>
-				    <div class="cate-item">
-			        <h3 class="vm-cap"> 
-			        	<a title="数码办公" href="" style="font-size:14px;">数码办公</a> 
-			        </h3>
-			        <div class="vm-cont">
-                <a href="" title="记事本">记事本</a>
-                <a href="" title="钢笔" >钢笔</a>
-                <a href="" title="手机壳">手机壳</a>
-                <a href="" title="鼠标垫">鼠标垫</a>
-                <a href="" title="移动电源">移动电源</a>
-                <a href="" title="U盘">U盘</a>
-                <a href="" title="名片夹">名片夹</a>
-	            </div>
-				    </div>
-				    <div class="cate-item">
-			        <h3 class="vm-cap"> 
-			        	<a title="照片印刷" href="" style="font-size:14px;">照片印刷</a> 
-			        </h3>
-			        <div class="vm-cont">
-                <a href="" title="照片冲印">照片冲印</a>
-                <a href="" title="年历挂历">年历挂历</a>
-                <a href="" title="报纸">报纸</a>
-                <a href="" title="纪念册/贺卡">纪念册/贺卡</a>
-                <a href="" title="扑克">扑克</a>
-	            </div>
-				    </div>
+				    		<h3 class="vm-cap">
+					        <a title="礼物类型" href=""  >礼物类型</a>
+						    </h3>
+						    <div class="vm-cont">
+						    	<a title="照片定制" href=""  >照片定制</a>
+			        		<a title="名字定制" href=""  >名字定制</a>
+					        <a title="创意又有心意" href=""  >创意又有心意</a>
+					        <a title="一对一对的" href=""  >一对一对的</a>
+					        <a title="实用" href=""  >实用</a>
+					        <a title="浪漫" href=""  >浪漫</a>
+					        <a title="礼物套装" href=""  >礼物套装</a>
+					        <a title="星座" href=""  >星座</a>
+				      	</div>
+				  		</div>
+						</div>
+						<!--按类目选礼物-->
+						<div class="gift-lm" style="width: 520px;">
+					    <p class="gift-tle">按类目选礼物</p>
+					    <div class="cate-cont" style="width: 540px;">
+				        <div class="cate-item">
+					        <h3 class="vm-cap"> <a title="时尚饰品" href="" style="font-size:14px;">时尚饰品</a> </h3>
+					        <div class="vm-cont">
+		                <a href="" title="项链">项链</a>
+		                <a href="" title="手链手镯">手链手镯</a>
+		                <a href="" title="戒指">戒指</a>
+		                <a href="" title="发饰/胸针">发饰/胸针</a>
+		                <a href="" title="耳钉耳环">耳钉耳环</a>
+		                <a href="" title="男士饰品">男士饰品</a>
+		                <a href="" title="高档珠宝">高档珠宝</a>
+					        </div>
+						    </div>
+				        <div class="cate-item">
+				        	<h3 class="vm-cap">
+				        		<a title="围巾配饰" href="" style="font-size:14px;">围巾配饰</a>
+				        	</h3>
+				        	<div class="vm-cont">
+		                <a href="" title="围巾/手套">围巾/手套</a>
+		                <a href="" title="钱包/背包">钱包/背包</a>
+		                <a href="" title="手表">手表</a>
+		                <a href="" title="皮带">皮带</a>
+		                <a href="" title="钥匙扣" >钥匙扣</a>
+		                <a href="" title="zippo/军刀">zippo/军刀</a>
+		                <a href="" title="梳子/化妆镜">梳子/化妆镜</a>
+			            </div>
+				      	</div>
+						    <div class="cate-item">
+					        <h3 class="vm-cap"> 
+					        	<a title="创意摆件" href="" style="font-size:14px;">创意摆件</a> 
+					        </h3>
+					        <div class="vm-cont">
+		                <a href="" title="DIY模型/拼图">DIY模型/拼图</a>
+		                <a href="" title="水晶摆件" >水晶摆件</a>
+		                <a href="" title="装饰画/摆件">装饰画/摆件</a>
+		                <a href="" title="蜡烛/创意灯">蜡烛/创意灯</a>
+		                <a href="" title="音乐盒" >音乐盒</a>
+		                <a href="" title="印章">印章</a>
+		                <a href="" title="汽车饰品">汽车饰品</a>
+					        </div>
+						    </div>
+						    <div class="cate-item">
+					        <h3 class="vm-cap"> 
+					        	<a title="布艺家纺" href="" style="font-size:14px;">布艺家纺</a> 
+					        </h3>
+					        <div class="vm-cont">
+		                <a href="" title="毛绒公仔">毛绒公仔</a>
+		                <a href="" title="抱枕靠垫">抱枕靠垫</a>
+		                <a href="" title="居家服/情趣">居家服/情趣</a>
+		            	</div>
+						    </div>
+						    <div class="cate-item">
+					        <h3 class="vm-cap"> 
+					        	<a title="花/巧克力" href="" style="font-size:14px;">花/巧克力</a> 
+					        </h3>
+					        <div class="vm-cont">
+		                <a href="" title="巧克力">巧克力</a>
+		                <a href="" title="永生花">永生花</a>
+		                <a href="" title="金箔花">金箔花</a>
+		                <a href="" title="酒水饮料" >酒水饮料</a>
+		                <a href="" title="卡通花/创意花束">卡通花/创意花束</a>
+		                <a href="/list/40-166/" title="蜡烛/气氛配件">蜡烛/气氛配件</a>
+			            </div>
+						    </div>
+						    <div class="cate-item">
+					        <h3 class="vm-cap"> 
+					        	<a title="家居日用" href="" style="font-size:14px;">家居日用</a> 
+					        </h3>
+					        <div class="vm-cont">
+		                <a href="" title="变色杯/保温杯">变色杯/保温杯</a>
+		                <a href="" title="遮阳伞">遮阳伞</a>
+		                <a href="" title="创意灯" >创意灯</a>
+		                <a href="" title="情趣礼品">情趣礼品</a>
+		                <a href="" title="生活电器">生活电器</a>
+		                <a href="" title="碗筷锅具">碗筷锅具</a>
+		                <a href="" title="收纳">收纳</a>
+		                <a href="" title="洗漱用品">洗漱用品</a>
+			            </div>
+						    </div>
+						    <div class="cate-item">
+					        <h3 class="vm-cap"> 
+					        	<a title="数码办公" href="" style="font-size:14px;">数码办公</a> 
+					        </h3>
+					        <div class="vm-cont">
+		                <a href="" title="记事本">记事本</a>
+		                <a href="" title="钢笔" >钢笔</a>
+		                <a href="" title="手机壳">手机壳</a>
+		                <a href="" title="鼠标垫">鼠标垫</a>
+		                <a href="" title="移动电源">移动电源</a>
+		                <a href="" title="U盘">U盘</a>
+		                <a href="" title="名片夹">名片夹</a>
+			            </div>
+						    </div>
+						    <div class="cate-item">
+					        <h3 class="vm-cap"> 
+					        	<a title="照片印刷" href="" style="font-size:14px;">照片印刷</a> 
+					        </h3>
+					        <div class="vm-cont">
+		                <a href="" title="照片冲印">照片冲印</a>
+		                <a href="" title="年历挂历">年历挂历</a>
+		                <a href="" title="报纸">报纸</a>
+		                <a href="" title="纪念册/贺卡">纪念册/贺卡</a>
+		                <a href="" title="扑克">扑克</a>
+			            </div>
+						    </div>
+							</div>
+						</div>
 					</div>
-				</div>
+		  	</div>
+		  	<!--导航栏-->
+		  	<div class="nav">
+		  		<ul class="nav-list">
+		  			<li><a href="../index.html" target="_blank" title="首页">首页</a></li>
+		  			<li><a href="#" title="暖心礼物">暖心礼物<img src="../img/navHot.gif" class="nav-hot"/></a></li>
+		  			<li><a href="#" title="送女生">送女生</a></li>
+		  			<li><a href="#" title="送男生">送男生</a></li>
+		  			<li><a href="#" title="生日礼物">生日礼物</a></li>
+		  			<li><a href="#" title="本周新品">本周新品</a></li>
+		  			<li><a href="#" title="约个会">约个会！</a></li>
+		  			<li class="navHover"></li>
+		  		</ul>
+		  	</div>
 			</div>
-  	</div>
-    	<!--导航栏-->
-    	<div class="nav">
-    		<ul class="nav-list">
-    			<li><a href="../index.html" target="_blank" title="首页">首页</a></li>
-    			<li><a href="#" title="暖心礼物">暖心礼物<img src="../img/navHot.gif" class="nav-hot"/></a></li>
-    			<li><a href="#" title="送女生">送女生</a></li>
-    			<li><a href="#" title="送男生">送男生</a></li>
-    			<li><a href="#" title="生日礼物">生日礼物</a></li>
-    			<li><a href="#" title="本周新品">本周新品</a></li>
-    			<li><a href="#" title="约个会">约个会！</a></li>
-    			<li class="navHover"></li>
-    		</ul>
-    	</div>
 		</div>
 		
 		<div id="main">
