--- a/src/index.html
+++ b/src/index.html
@@ -3,72 +3,76 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>卡当网</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 		<link rel="stylesheet" href="lib/css/reset.css" />
 		<link rel="stylesheet" href="dist/css/common.css" />
 		<link rel="stylesheet" href="dist/css/index.css" />
+		<link rel="shortcut icon" href="dist/css/img/onair.ico" />
 	</head>
 	<body>	
 		<div id="wrap">
 			<div id="header">
-				<span class="logo"><a href="index.html" target="_self" title="卡当网"></a></span>
-				<div class="intro">
-					<ul class="intro-login">
-						<li>Hi，欢迎来到卡当网</li>
-						<li id="un"></li>
-						<li id="login"><a href="#" title="登录">登录</a></li>
-						<li id="sign"><a href="#" title="注册">注册</a></li>
-					</ul>
-					<!--我的卡当 导航栏-->
-	      	<ul class="intro-menu">
-	      		<li>
-	      			<a href="#" title="我的卡当">我的卡当<i class="icon"></i></a>
-	      			<ul class="select">
-	      				<li><a href="#" title="我的订单">我的订单</a></li>
-	      				<li><a href="#" title="我的优惠券">我的优惠券</a></li>
-	      			</ul>
-	      		</li>
-	      		<li>
-	      			<a href="html/cart.html" target="_blank" title="购物车"><i class="icon-cart"></i>购物车<i class="icon"></i></a>
-	      			<p class="select" style="width: 304px;left:80px;color:#999">您的购物车中暂无商品，赶快选择心爱的商品吧！</p>
-	      		</li>
-	      		<li>
-	      			<a href="#" title="手机版"><i class="icon-phone"></i>手机版</a>
-	      			<p class="select" style="left: 100px;width: 148px;height:188px;border: 0;padding: 0;"><img src="img/img-code.jpg"/></p>
-	      		</li>
-	      		<li>
-	      			<a href="#" title="我的收藏">我的收藏<i class="icon"></i></a>
-	      			<ul class="select" style="left: 240px;">
-	      				<li><a href="#" title="收藏的商品">收藏的商品</a></li>
-	      				<li><a href="#" title="收藏的店铺">收藏的店铺</a></li>
-	      			</ul>
-	      		</li>
-	      		<li><a href="#" title="在线客服">在线客服</a></li>
-	      		<li><a href="#" title="收藏卡当网">收藏卡当网</a></li>
-	      	</ul>
-	    	</div>
-	    	<!--搜索框-->
-	    	<div class="seach">
-	    		<input type="text" class="seach-input" placeholder="七夕情人节送女朋友什么？" />
-	    		<input type="submit" class="search-button"/>
-	      	<img src="img/kdDes.png" style="float: right;margin:12px 35px 0 0;"/>
-	    		<ul class="search-tab">
-	    			<li><a href="#" title="送女朋友">送女朋友</a></li>
-	    			<li><a href="#" title="浪漫表白">浪漫表白</a></li>
-	    			<li><a href="#" title="我的订单查询">我的订单查询</a></li>
-	    		</ul>
-	    	</div>
-	    	<!--导航栏-->
-	    	<div class="nav">
-	    		<ul class="nav-list">
-	    			<li><a href="html/list.html" target="_blank" title="暖心礼物">暖心礼物<img src="img/navHot.gif" class="nav-hot"/></a></li>
-	    			<li><a href="#" title="送女生">送女生</a></li>
-	    			<li><a href="#" title="送男生">送男生</a></li>
-	    			<li><a href="#" title="生日礼物">生日礼物</a></li>
-	    			<li><a href="#" title="本周新品">本周新品</a></li>
-	    			<li><a href="#" title="约个会">约个会！</a></li>
-	    			<li class="navHover"></li>
-	    		</ul>
-	    	</div>
+				<div class="container">
+					<span class="logo"><a href="index.html" target="_self" title="卡当网"></a></span>
+					<div class="intro">
+						<ul class="intro-login">
+							<li>Hi，欢迎来到卡当网</li>
+							<li id="un"></li>
+							<li id="login"><a href="#" title="登录">登录</a></li>
+							<li id="sign"><a href="#" title="注册">注册</a></li>
+						</ul>
+						<!--我的卡当 导航栏-->
+		      	<ul class="intro-menu">
+		      		<li>
+		      			<a href="#" title="我的卡当">我的卡当<i class="icon"></i></a>
+		      			<ul class="select">
+		      				<li><a href="#" title="我的订单">我的订单</a></li>
+		      				<li><a href="#" title="我的优惠券">我的优惠券</a></li>
+		      			</ul>
+		      		</li>
+		      		<li>
+		      			<a href="html/cart.html" target="_blank" title="购物车"><i class="icon-cart"></i>购物车<i class="icon"></i></a>
+		      			<p class="select" style="width: 304px;left:80px;color:#999">您的购物车中暂无商品，赶快选择心爱的商品吧！</p>
+		      		</li>
+		      		<li>
+		      			<a href="#" title="手机版"><i class="icon-phone"></i>手机版</a>
+		      			<p class="select" style="left: 100px;width: 148px;height:188px;border: 0;padding: 0;"><img src="img/img-code.jpg"/></p>
+		      		</li>
+		      		<li>
+		      			<a href="#" title="我的收藏">我的收藏<i class="icon"></i></a>
+		      			<ul class="select" style="left: 240px;">
+		      				<li><a href="#" title="收藏的商品">收藏的商品</a></li>
+		      				<li><a href="#" title="收藏的店铺">收藏的店铺</a></li>
+		      			</ul>
+		      		</li>
+		      		<li><a href="#" title="在线客服">在线客服</a></li>
+		      		<li><a href="#" title="收藏卡当网">收藏卡当网</a></li>
+		      	</ul>
+		    	</div>
+		    	<!--搜索框-->
+		    	<div class="seach">
+		    		<input type="text" class="seach-input" placeholder="七夕情人节送女朋友什么？" />
+		    		<input type="submit" class="search-button"/>
+		      	<img src="img/kdDes.png" style="float: right;margin:12px 35px 0 0;"/>
+		    		<ul class="search-tab">
+		    			<li><a href="#" title="送女朋友">送女朋友</a></li>
+		    			<li><a href="#" title="浪漫表白">浪漫表白</a></li>
+		    			<li><a href="#" title="我的订单查询">我的订单查询</a></li>
+		    		</ul>
+		    	</div>
+		    	<!--导航栏-->
+		    	<div class="nav">
+		    		<ul class="nav-list">
+		    			<li><a href="html/list.html" target="_blank" title="暖心礼物">暖心礼物<img src="img/navHot.gif" class="nav-hot"/></a></li>
+		    			<li><a href="#" title="送女生">送女生</a></li>
+		    			<li><a href="#" title="送男生">送男生</a></li>
+		    			<li><a href="#" title="生日礼物">生日礼物</a></li>
+		    			<li><a href="#" title="本周新品">本周新品</a></li>
+		    			<li><a href="#" title="约个会">约个会！</a></li>
+		    			<li class="navHover"></li>
+		    		</ul>
+		    	</div>
+				</div>
 			</div>
 			<div id="main">
 				<!--第一屏-->
