--- a/pc-src/index.html
+++ b/pc-src/index.html
@@ -289,7 +289,7 @@
 		      			<h3><span>夹克/外套</span></h3>
 		     				<div class="clearfix">
 		     				 	<ul>
-		                <li class="first">
+		                <li class="first" onclick="toProduct()">
 		                	<a href="#"><img class="lazy" src="img/swiper4.jpg" style="width:100%" /></a>
 		                </li>
 		                <li>
