--- a/pc-src/html/cart.html
+++ b/pc-src/html/cart.html
@@ -25,7 +25,7 @@
           </div>
           <div class="intro">
             <ul class="intro-login">
-              <li>Hi，欢迎来到卡当网</li>
+              <li>Hi，欢迎来到港仔男装</li>
               <li id="un"></li>
               <li id="login"><a href="#" title="登录">登录</a></li>
               <li id="sign"><a href="#" title="注册">注册</a></li>
@@ -55,7 +55,7 @@
                 </ul>
               </li>
               <li><a href="#" title="在线客服">在线客服</a></li>
-              <li><a href="#" title="收藏卡当网">收藏卡当网</a></li>
+              <li><a href="#" title="收藏卡当网">收藏港仔男装</a></li>
             </ul>
           </div>
           <!--搜索框-->
@@ -88,7 +88,7 @@
               <tbody class="wrap-store">
                 <tr class="lay-store-hd">
                   <th colspan="5" class="mod-name"> 店铺：
-                  	<a href="" target="_blank">卡当自营店</a>
+                  	<a href="" target="_blank">港仔男装</a>
                   	<span title="联系客服" class="airlines"><i class="detail-icons"></i>联系客服</span> 
                   </th>
                   <th class="mod-promotion"> </th>
