--- a/pc-src/html/product.html
+++ b/pc-src/html/product.html
@@ -16,7 +16,7 @@
 				<span class="logo"><a href="../index.html" target="_self" title="卡当网"></a></span>
 				<div class="intro">
 					<ul class="intro-login">
-						<li>Hi，欢迎来到卡当网</li>
+						<li>Hi，欢迎来到港仔男装</li>
 						<li class="login"><a href="#" title="登录">登录</a></li>
 						<li class="sign"><a href="#" title="注册">注册</a></li>
 					</ul>
@@ -45,18 +45,18 @@
 	      			</ul>
 	      		</li>
 	      		<li><a href="#" title="在线客服">在线客服</a></li>
-	      		<li><a href="#" title="收藏卡当网">收藏卡当网</a></li>
+	      		<li><a href="#" title="收藏卡当网">收藏港仔男装</a></li>
 	      	</ul>
 	    	</div>
 	    	<!--搜索输入框-->
 	    	<div class="seach">
-	    		<input type="text" class="seach-input" placeholder="七夕情人节送女朋友什么？" />
+	    		<input type="text" class="seach-input" placeholder="春季长款T恤" />
 	    		<input type="submit" class="search-button"/>
 	      	<img src="../img/kdDes.png" style="float: right;margin:12px 35px 0 0;"/>
 	    		<ul class="search-tab">
-	    			<li><a href="#" title="送女朋友">送女朋友</a></li>
-	    			<li><a href="#" title="浪漫表白">浪漫表白</a></li>
-	    			<li><a href="#" title="我的订单查询">我的订单查询</a></li>
+	    			<li><a href="#" title="夹克/外套">夹克/外套</a></li>
+	    			<li><a href="#" title="牛仔裤/运动裤">牛仔裤/运动裤</a></li>
+	    			<li><a href="#" title="男鞋/运动鞋">男鞋/运动鞋</a></li>
 	    		</ul>
 	    	</div>
 	    	<!--送礼攻略-->
@@ -235,12 +235,11 @@
 		  	<div class="nav">
 		  		<ul class="nav-list">
 		  			<li><a href="../index.html" target="_blank" title="首页">首页</a></li>
-		  			<li><a href="#" title="暖心礼物">暖心礼物<img src="../img/navHot.gif" class="nav-hot"/></a></li>
-		  			<li><a href="#" title="送女生">送女生</a></li>
-		  			<li><a href="#" title="送男生">送男生</a></li>
-		  			<li><a href="#" title="生日礼物">生日礼物</a></li>
-		  			<li><a href="#" title="本周新品">本周新品</a></li>
-		  			<li><a href="#" title="约个会">约个会！</a></li>
+		  			<li><a href="#" title="夹克/外套">夹克/外套<img src="../img/navHot.gif" class="nav-hot"/></a></li>
+		  			<li><a href="#" title="牛仔裤/运动裤">牛仔裤/运动裤</a></li>
+		  			<li><a href="#" title="男鞋/运动鞋">男鞋/运动鞋</a></li>
+		  			<li><a href="#" title="上衣/T恤">上衣/T恤</a></li>
+		  			<li><a href="#" title="周边">周边</a></li>
 		  			<li class="navHover"></li>
 		  		</ul>
 		  	</div>
